--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <div class="box"></div>
             <div class="box"></div>
          </div>
-         <div class="block" id="block" onclick="animBlock()">
+         <div class="block" id="block">
             <div class="text">esison</div>
          </div>
       </div>
