--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       <link rel="stylesheet" href="main.css?v=1.0">
    </head>
    <body>
+   <div class="logo-container">
       <div class="logo-wrapper">
          <div class="light">
             <div class="box"></div>
@@ -119,6 +120,7 @@
             <div class="text">esison</div>
          </div>
       </div>
+	  </div>
    </body>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </html>
