New colorful design

--- a/index.html
+++ b/index.html
@@ -34,15 +34,23 @@
       <link rel="stylesheet" href="main.css?v=1.0">
    </head>
    <body>
-	   <div class="logo-container">
-		  <div class="logo-wrapper">
-			 <div class="block" id="block">
-				<div class="text">esison</div>
-			 </div>
-		  </div>
-		  <div class="call-out">
-			contact@esison.com
-		  </div>
-	  </div>
+	<div class=
+		"onboard-background-animate w-full h-screen relative flex flex-col items-center justify-center m-0 p-0 overflow-hidden"
+	>
+		<img class="h-52 w-52" src="static/esison-light.svg" alt="logo" />
+		<div class="call-out">contact@esison.com</div>
+		<ul class="bg-bubbles">
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+	</div>
    </body>
 </html>
